[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"

[[bin]]
name = "day1"
path = "src/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/day4/day4.rs"

[[bin]]
name = "day5"
path = "src/day5/day5.rs"

[[bin]]
name = "day6"
path = "src/day6/day6.rs"
