[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
nom = "7.1.1"
pathfinding = "4.0.0"

[[bin]]
name = "day1"
path = "src/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/day4/day4.rs"

[[bin]]
name = "day5"
path = "src/day5/day5.rs"

[[bin]]
name = "day6"
path = "src/day6/day6.rs"

[[bin]]
name = "day7"
path = "src/day7/day7.rs"

[[bin]]
name = "day8"
path = "src/day8/day8.rs"

[[bin]]
name = "day9"
path = "src/day9/day9.rs"

[[bin]]
name = "day10"
path = "src/day10/day10.rs"

[[bin]]
name = "day11"
path = "src/day11/day11.rs"

[[bin]]
name = "day12"
path = "src/day12/day12.rs"

[[bin]]
name = "day13"
path = "src/day13/day13.rs"

[[bin]]
name = "day14"
path = "src/day14/day14.rs"

[[bin]]
name = "day15"
path = "src/day15/day15.rs"

[[bin]]
name = "day18"
path = "src/day18/day18.rs"

[[bin]]
name = "day19"
path = "src/day19/day19.rs"

[[bin]]
name = "day20"
path = "src/day20/day20.rs"

[[bin]]
name = "day21"
path = "src/day21/day21.rs"

[[bin]]
name = "day22"
path = "src/day22/day22.rs"

[[bin]]
name = "day23"
path = "src/day23/day23.rs"
